# Group12-MotionPlanning

./: degree.py  lala.txt  latest_ros2_messages.txt  robot_calibration.yaml  stuff.txt  test_goal_publishers_config.yaml
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/group_12_motion_planning/share/group_12_motion_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hello_moveit/share/hello_moveit/: package.dsv  package.ps1  package.sh
install/my_robot_cell_description/share/ament_index/resource_index/package_run_dependencies/: my_robot_cell_description
install/my_robot_cell_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_cell_description
install/my_robot_cell_description/share/my_robot_cell_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot_cell_description/share/my_robot_cell_description/cmake/: my_robot_cell_descriptionConfig-version.cmake  my_robot_cell_descriptionConfig.cmake
install/my_robot_cell_description/share/my_robot_cell_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_cell_description/share/my_robot_cell_description/launch/: view_robot.launch.py
install/my_robot_cell_description/share/my_robot_cell_description/srdf/: ur.srdf.xacro
install/predefined_motion/share/ament_index/resource_index/package_run_dependencies/: predefined_motion
install/predefined_motion/share/ament_index/resource_index/parent_prefix_path/: predefined_motion
install/predefined_motion/share/predefined_motion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/predefined_motion/share/predefined_motion/cmake/: predefined_motionConfig-version.cmake  predefined_motionConfig.cmake
install/predefined_motion/share/predefined_motion/environment/: ament_prefix_path.dsv  path.dsv
install/predefined_motion/share/predefined_motion/launch/: view_robot.launch.py
install/predefined_motion/share/predefined_motion/srdf/: ur.srdf.xacro
log/: latest_build
src/group_12_motion_planning/: CMakeLists.txt  package.xml
src/group_12_motion_planning/src/: quaternion_utils.cpp  quaternion_utils.h  ur5e_moveit_controller.cpp
src/hello_moveit/: package.xml
src/install/: local_setup.sh  setup.bash  setup.sh
src/install/hello_moveit_ur/share/hello_moveit_ur/: package.dsv  package.ps1  package.sh
src/install/my_robot_cell_description/share/ament_index/resource_index/parent_prefix_path/: my_robot_cell_description
src/install/my_robot_cell_description/share/my_robot_cell_description/: local_setup.dsv  package.bash  package.sh
src/install/my_robot_cell_description/share/my_robot_cell_description/launch/: view_robot.launch.py
src/install/predefined_motion/share/ament_index/resource_index/package_run_dependencies/: predefined_motion
src/install/predefined_motion/share/predefined_motion/: local_setup.dsv  package.bash  package.ps1  package.sh  package.xml
src/install/predefined_motion/share/predefined_motion/srdf/: ur.srdf.xacro
src/install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
src/install/ur_moveit_config/share/ur_moveit_config/cmake/: ur_moveit_configConfig.cmake
src/log/: latest_build
src/my_robot_cell_description/: CMakeLists.txt  setup.py
src/my_robot_cell_description/config/: moveit_controllers.yaml
src/my_robot_cell_description/launch/: view_robot.launch.py
src/my_robot_cell_description/src/my_robot_cell_description/: move_to_joint_goal.py
src/my_robot_cell_description/urdf/: ur.urdf.xacro
src/predefined_motion/: CMakeLists.txt
src/predefined_motion/launch/: view_robot.launch.py
src/test/: coords1.txt  coords10.txt  coords2.txt  coords3.txt  coords4.txt  coords5.txt  coords6.txt  coords7.txt  coords8.txt  coords9.txt  save_tf_and_joint_states.py  test.py
src/ur5e_control/: CMakeLists.txt  package.xml
