cmake_minimum_required(VERSION 3.8)
project(group_12_motion_planning)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(rclcpp REQUIRED)
find_package(moveit_core REQUIRED)

# Get include directories
message(STATUS "moveit_ros_planning_interface_INCLUDE_DIRS: ${moveit_ros_planning_interface_INCLUDE_DIRS}")
message(STATUS "moveit_core_INCLUDE_DIRS: ${moveit_core_INCLUDE_DIRS}")

# Add include directories
include_directories(
  /opt/ros/jazzy/include
  ${moveit_ros_planning_interface_INCLUDE_DIRS}
  ${moveit_core_INCLUDE_DIRS}
)

add_executable(ur5e_moveit_controller src/ur5e_moveit_controller.cpp)

# Link libraries
target_link_libraries(ur5e_moveit_controller
  ${moveit_ros_planning_interface_LIBRARIES}
  rclcpp::rclcpp
)

install(TARGETS ur5e_moveit_controller
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
